增加智能会话
